microservices/basic-API:v7 Swagger docs for All API Endpoints
