# microservices/6_API-swagger-doc/product-api/handlers/products.go
@@ -1,23 +1,7 @@
-// Package classification of Product API
-//
-// Documentation for Product API
-//
-//		Schemes: http
-//	 BasePath: /
-//	 Version: 1.0.0
-//
-//		Consumes:
-//		- application/json
-//
-//	 Produces:
-//	 - application/json
-//
-// swagger:meta
 package handlers
 
 import (
 	"log"
-	"product-api/data"
 )
 
 type Products struct {
@@ -27,24 +11,4 @@ type Products struct {
 // Create a new instance of Products which is a handler(contains ServerHTTP)
 func NewProductsHandler(l *log.Logger) *Products {
 	return &Products{l}
-}
-
-// A list of products returns in the response
-// swagger:response productsResponse
-type productsResponseWrapper struct {
-	// All products in the system
-	// in: body
-	Body []data.Product
-}
-
-// swagger:response noContent
-type productsNoContent struct {
-}
-
-// swagger:parameters deleteProduct
-type productIDParameterWrapper struct {
-	// The id of the product to delete from the database
-	// in: path
-	// required: true
-	ID int `json:"id"`
 }
