# microservices/6_API-swagger-doc/product-api/swagger.yaml
@@ -39,7 +39,41 @@ paths:
             operationId: listProducts
             responses:
                 "200":
+                    $ref: '#/responses/productsResponse'
+            tags:
+                - products
+        post:
+            description: Create a new product
+            operationId: createProduct
+            parameters:
+                - description: |-
+                    Product data structure to Update or Create.
+                    Note: the id field is ignored by update and create operations
+                  in: body
+                  name: Body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Product'
+            responses:
+                "200":
                     $ref: '#/responses/productResponse'
+            tags:
+                - products
+        put:
+            description: Update a products details
+            operationId: updateProduct
+            parameters:
+                - description: |-
+                    Product data structure to Update or Create.
+                    Note: the id field is ignored by update and create operations
+                  in: body
+                  name: Body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Product'
+            responses:
+                "201":
+                    $ref: '#/responses/noContentResponse'
             tags:
                 - products
     /products/{id}:
@@ -59,11 +93,29 @@ paths:
                     $ref: '#/responses/noContent'
             tags:
                 - products
+        get:
+            description: Return a list of products from the database
+            operationId: listSingleProduct
+            parameters:
+                - description: The id of the product to delete from the database
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
+            responses:
+                "200":
+                    $ref: '#/responses/productResponse'
+            tags:
+                - products
 produces:
     - application/json
 responses:
-    noContent:
-        description: ""
+    productResponse:
+        description: Data structure representing a single product
+        schema:
+            $ref: '#/definitions/Product'
     productsResponse:
         description: A list of products returns in the response
         schema:
